tests/snapshots/generate_plan_tests__python_2_runtime.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "variables": {
    "NIXPACKS_METADATA": "python",
    "PYTHONUNBUFFERED": "1"
  },
  "phases": {
    "install": {
      "name": "install",
      "dependsOn": [
        "setup"
      ]
    },
    "setup": {
      "name": "setup",
      "nixPkgs": [
        "python27",
        "gcc"
      ],
      "nixLibs": [
        "zlib",
        "stdenv.cc.cc.lib"
      ],
      "nixOverlays": [],
      "nixpacksArchive": "[archive]"
    }
  },
  "start": {
    "cmd": "python main.py"
  }
}
