tests/snapshots/generate_plan_tests__python_numpy.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "nixpacksVersion": "[version]",
  "buildImage": "[build_image]",
  "variables": {
    "NIXPACKS_METADATA": "python"
  },
  "phases": [
    {
      "name": "setup",
      "nixPackages": [
        {
          "name": "python38"
        }
      ],
      "nixLibraries": [
        "zlib",
        "stdenv.cc.cc.lib"
      ]
    },
    {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "commands": [
        "python -m venv /opt/venv && . /opt/venv/bin/activate && pip install -r requirements.txt"
      ],
      "onlyIncludeFiles": [
        "requirements.txt"
      ],
      "cacheDirectories": [
        "/root/.cache/pip"
      ],
      "paths": [
        "/opt/venv/bin"
      ]
    },
    {
      "name": "build",
      "dependsOn": [
        "install"
      ]
    }
  ],
  "startPhase": {
    "cmd": "python main.py"
  }
}
