tests/snapshots/generate_plan_tests__python_poetry.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "variables": {
    "NIXPACKS_POETRY_VERSION": "1.1.13"
  },
  "phases": [
    {
      "name": "setup",
      "nixPackages": [
        {
          "name": "python38"
        }
      ],
      "nixLibraries": [],
      "aptPackages": []
    },
    {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "commands": [
        "python -m venv /opt/venv && . /opt/venv/bin/activate && pip install poetry==$NIXPACKS_POETRY_VERSION && poetry install --no-dev --no-interaction --no-ansi"
      ],
      "onlyIncludeFiles": [
        "poetry.lock",
        "pyproject.toml"
      ],
      "cacheDirectories": [
        "/root/.cache/pip"
      ]
    },
    {
      "name": "build",
      "dependsOn": [
        "install"
      ]
    }
  ],
  "startPhase": {
    "cmd": "python main.py"
  }
}
